# orderbook-wtf

./: .env.ex  .gitignore  Cargo.toml  README.md  Roadmap.md  docker-compose.yaml  dump.rdb  run.sh  vercel.json
back/: .env.ex  .gitignore  Cargo.toml  dump.rdb
back/misc/data-back/: base.stream-balances.json  ethereum.stream-balances.json
back/misc/data-front/: components.ethereum.json  ethereum.opti.eth-usdc.orderbook-0to1.json  ethereum.pso.usdc-eth.bck.json  ethereum.pso.usdc-eth.json  odb.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.json  odb.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  odb.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xdac17f958d2ee523a2206206994597c13d831ec7.json  odb.ethereum.0x6b175474e89094c44da98b954eedeac495271d0f-0xdac17f958d2ee523a2206206994597c13d831ec7.json  odb.ethereum.0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48-0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.json  odb.ethereum.0xdac17f958d2ee523a2206206994597c13d831ec7-0x2260fac5e5542a773aa44fbcfedf7c193bc2c599.json  states.balancer.ethereum.json  states.uniswapv2.ethereum.json  states.uniswapv3.ethereum.json
back/misc/data-front-v1/: orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0x6b175474e89094c44da98b954eedeac495271d0f.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0x6b175474e89094c44da98b954eedeac495271d0f-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48-0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.json  orderbook.ethereum.0xdac17f958d2ee523a2206206994597c13d831ec7-0x2260fac5e5542a773aa44fbcfedf7c193bc2c599.json
back/misc/data-front-v2/: orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0x6b175474e89094c44da98b954eedeac495271d0f.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  orderbook.ethereum.0x2260fac5e5542a773aa44fbcfedf7c193bc2c599-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0x6b175474e89094c44da98b954eedeac495271d0f-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xdac17f958d2ee523a2206206994597c13d831ec7.json  orderbook.ethereum.0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48-0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2.json  orderbook.ethereum.0xdac17f958d2ee523a2206206994597c13d831ec7-0x2260fac5e5542a773aa44fbcfedf7c193bc2c599.json  orderbook.ethereum.DAI-USDT-before.json  orderbook.ethereum.DAI-USDT.json  orderbook.ethereum.USDC-DAI.json  orderbook.ethereum.USDC-USDT.json  orderbook.ethereum.USDC-WBTC.json  orderbook.ethereum.WBTC-DAI.json  orderbook.ethereum.WBTC-USDT-before.json  orderbook.ethereum.WBTC-USDT.json  orderbook.ethereum.WETH-DAI.json  orderbook.ethereum.WETH-USDC.json  orderbook.ethereum.WETH-USDT-before.json  orderbook.ethereum.WETH-USDT.json  orderbook.ethereum.WETH-WBTC.json
back/misc/drafts/: api.js
back/misc/notes/: Notes.md
back/misc/old/: api.rs  quickstart.rs
back/ops/: Dockerfile  local.fork.sh  local.start.sh
back/src/: api.rs  lib.rs  stream.rs
back/src/shd/: static.rs  types.rs
back/tests/: api.base.sh  api.curl.sh  api.mainnet.sh  api.test.sh  dfs.rs  routing.rs  trades.rs
front/: .env  .env.example  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
front/ops/: Dockerfile
front/src/app/: error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  template.tsx
front/src/config/: app.config.ts  charts.config.ts  toasts.config.ts
front/src/data/: back-tokens.tsx  orderbook.ethereum.WETH-USDC.json
front/src/enums/: app.enum.ts  depth-chart.enum.ts  icons.enum.ts  index.ts  svgs.enum.ts
front/src/hooks/: useClickOutside.ts  useDebounce.ts  useTimeAgo.ts
front/src/interfaces/: app.interface.ts  depth-chart.interface.ts  index.ts  rust-api.interface.ts
front/src/providers/: react-query.providers.tsx  wagmi-and-react-query.providers.tsx  wagmi.ts
front/src/stores/: api.store.ts  app.store.ts
front/src/types/: depth-chart.type.ts  index.ts  requests.type.ts
front/src/utils/: app.util.ts  error.util.ts  format.util.ts  index.ts  orderbook.util.ts  requests.util.ts  theme.util.ts  viem.util.ts
misc/: Notes.md
misc/data/: components.ethereum.json  ethereum.opti.eth-usdc.orderbook-0to1.json  ethereum.opti.eth-usdc.orderbook-1to0.json  ethereum.opti.eth-usdc.orderbook.json  ethereum.pso.usdc-eth.json  states.balancer.ethereum.json  states.uniswapv2.ethereum.json  states.uniswapv3.ethereum.json  tokens.ethereum.json
misc/data-back/: ethereum.stream-balances.json
misc/data-front/: ethereum.eth-usdc.pair-orderbook.json  ethereum.opti.eth-usdc.orderbook.json
misc/drafts/: agglqdty.rs  cvx.opti.rs  stream1.rs
misc/logs/: output.states.txt  stream-balancer.txt  stream-proto.all.txt  stream-proto.txt
misc/notes/: v4.md
misc/old/: quickstart.rs
ops/: Dockerfile  entrypoint.sh  local.start.sh  tycho.sh  tycho.yaml
src/: api.rs  draft.rs  server.rs  stream.rs
src/derive/: derive.rs
src/drafts/: stream1.rs  stream2.rs
src/shd/: mod.rs  static.rs  types.rs
src/shd/config/: networks.json
src/shd/core/: amms.rs  client.rs  liquidity.rs  mod.rs  orderbook.rs  pair.rs  sim.rs
src/shd/data/: fmt.rs  mod.rs  redis.rs
src/shd/maths/: mod.rs  odb.rs  steps.rs  ticks.rs  v2.rs
src/shd/utils/: misc.rs  mod.rs  tokens.rs
src/tmp/: client.rs  simu.rs  stream.rs
src/tycho/: simulate.rs  stream.rs
tests/: api.curl.sh  tycho.api.sh
(+111 files in other folders)
