[package]
name = "InfraDEX"
version = "0.1.0"
edition = "2021"

[dependencies]
tycho-core = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.46.0" }
tycho-client = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.46.0" }
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.68.0" }

# tycho-core: defines the core structs and traits used throughout the Tycho system. More detailed docs here.
# tycho-indexer: contains the main logic used to process incoming data and propogate the relevant information to clients and storage. Includes the RPC servic
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4.23"
futures = "0.3.31"
num-bigint = "0.4.6"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }

[[bin]]
name = "stream"
path = "src/tycho/stream.rs"

[[bin]]
name = "httprpc"
path = "src/tycho/httprpc.rs"
[[bin]]
name = "simulate"
path = "src/tycho/simulate.rs"
