[package]
name = "tap2"
version = "0.1.0"
edition = "2021"

# ======================================================================================================================================================================================================

[dependencies]

tokio = { version = "1.28", features = ["full"] }
chrono = "0.4.23"
futures = "0.3.31"
num-bigint = "0.4.6"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }

# tycho-core: defines the core structs and traits used throughout the Tycho system. More detailed docs here.
# tycho-core = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.46.0" }
# tycho-client = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.46.0" }
# tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.68.0" }

# tycho-indexer: contains the main logic used to process incoming data and propogate the relevant information to clients and storage. Includes the RPC service

# tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", features = ["evm"] }
tycho-core = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core" }
tycho-client = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client" }
tycho-execution = { git = "https://github.com/propeller-heads/tycho-execution.git", package = "tycho-execution", features = ["evm"] }

tycho-simulation = { git = "https://github.com/0xMerso/tycho-simulation.git", branch = "protocol-state-pub-fields", features = ["evm"]  }

toml = "0.8.12"
serde = { version = "1.0.104", features = ["derive"] }
clippy = "0.0.302"
env_logger = "0.11.3"
eyre = "0.6.11"
log = "0.4.20"
url = "2.5.0"
anyhow = "1.0"
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.0.0"
rand = "0.8.5"
serde_json = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.12.4"
redis = { version = "0.26.1", features = ["tokio-comp"] }
alloy = { version = "0.3.1", features = ["full", "node-bindings", "json-rpc", "rpc-client"] }
num-traits = "0.2.19"
alloy-chains = "0.1.63"
axum = "0.8.1"

# hyper = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }

# ======================================================================================================================================================================================================

[lib]
path = "src/lib.rs"

# === MAIN ===

[[bin]]
name = "stream"
path = "src/stream.rs"

[[bin]]
name = "api"
path = "src/api.rs"


# === DRAFTS ===

[[bin]]
name = "stream1"
path = "src/drafts/stream1.rs"

[[bin]]
name = "stream2"
path = "src/drafts/stream2.rs"

[[bin]]
name = "agglqdty"
path = "src/drafts/agglqdty.rs"


# ======================================================================================================================================================================================================
